fixed css on mobile

--- a/star-wars/src/styles/App.css
+++ b/star-wars/src/styles/App.css
@@ -21,4 +21,7 @@
   .Sidebar {
     height: auto;
   }
+  .Sidebar h1 {
+    display: none;
+  }
 }
